Remove dialog-buttons specific css. Remove title from dialog, and set title in interaction. Remove blur when removing interaction, this is handled by dnb. Remove overlay visibility when creating dnb element to allow it to overflow toolbar. Make sure interaction title is not shown for newly created elements. Added outline for interactions. [HFJ-617]

--- a/styles/dialog.css
+++ b/styles/dialog.css
@@ -6,17 +6,6 @@
   vertical-align: middle;
 }
 
-.h5p-dialog-buttons {
-  overflow: hidden;
-  position: absolute;
-  width: 100%;
-  top: 0;
-  background-color: #e9e9e9;
-  padding: 0.5em;
-  box-sizing: border-box;
-  border-bottom: 1px solid #ccc;
-}
-
 .h5p-dialog.h5p-big {
   padding: 0;
 }
